# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.12
#

2006-01-22 19:38:34 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-151

    Summary:
      updating the CHANGES file (in the way to the 0.12.2 release)
    Revision:
      itools--main--0.12--patch-151


    modified files:
     CHANGES.txt Changelog


2006-01-21 17:42:11 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-150

    Summary:
      web.server, only one thread (worker and listener are the same)
    Revision:
      itools--main--0.12--patch-150


    modified files:
     Changelog web/server.py


2006-01-21 17:14:30 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-149

    Summary:
      web.server, only one worker thread (faster and more robust)
    Revision:
      itools--main--0.12--patch-149


    modified files:
     Changelog web/server.py


2006-01-19 11:39:44 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-148

    Summary:
      merge fixes from herve (#256)
    Revision:
      itools--main--0.12--patch-148

    Patches applied:
    
     * herve@oursours.net--public/itools--zope2--0.12--patch-13
       delete obsolete method error_page, the template was already deleted.
    
     * herve@oursours.net--public/itools--zope2--0.12--patch-16
       fix opening the Epoz palette when ui is not at the root.
    
     * herve@oursours.net--public/itools--zope2--0.12--patch-17
       prepare the call of the table helper for the time it will be ready.
    

    modified files:
     Changelog cms/Handler.py cms/WebSite.py cms/ui/epoz.js
     cms/ui/epoz.xml

    new patches:
     herve@oursours.net--public/itools--zope2--0.12--patch-13
     herve@oursours.net--public/itools--zope2--0.12--patch-16
     herve@oursours.net--public/itools--zope2--0.12--patch-17


2006-01-17 17:10:46 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-147

    Summary:
      merge minor improvements to "itools.cms.Folder" from herve
    Revision: